--- a/ecom/templates/admin/admhome.html
+++ b/ecom/templates/admin/admhome.html
@@ -176,7 +176,7 @@
             labels: orderStatusLabels,
             datasets: [{
                 data: orderStatusCount,
-                backgroundColor: ['#F0FF33', '#FF0000', '#00FFBD','#00FF27','#006CFF'],  // Colors for each status
+                backgroundColor: ['#F0FF33', '#FF0000', '#00FFBD','#006CFF','#00FF27'],  // Colors for each status
             }]
         },
         options: {
