--- a/ecom/templates/home1.html
+++ b/ecom/templates/home1.html
@@ -100,7 +100,7 @@
         </div>   		
     	</div>
     	<div class="container">
-    		<div class="row">
+    		<div class="row mainprod">
 				{% for prod in product %}
     			<div class="col-sm-12 col-md-6 col-lg-3 ftco-animate d-flex " id="divhgt">
     				<div class="product d-flex flex-column hgt align-items-center justify-content-center align-content-center " id="divhg">
