--- a/ecom/templates/admin/admorders.html
+++ b/ecom/templates/admin/admorders.html
@@ -18,15 +18,13 @@
                 <div class="col-sm-12 text-center">
                     <h2>Order <b>Management</b></h2>
                 </div>
-                {% comment %} <div class="col-sm-6">
-                    <!-- <a href="#addEmployeeModal" class="btn btn-success" data-toggle="modal"><i class="material-icons">&#xE147;</i> <span>Add New Product</span></a> -->
-                    <!-- <a href="#deleteEmployeeModal" class="btn btn-danger" data-toggle="modal"><i class="material-icons">&#xE15C;</i> <span>Delete</span></a>						 -->
-                </div> {% endcomment %}
             </div>
         </div>
         <div class="row input-group mb-4 mt-4">
-            <input type="search" class="form-control rounded offset-1 col-lg-8 col-sm-4 " placeholder="Search" aria-label="Search" aria-describedby="search-addon" />
-            <button type="button" class="btn btn-outline-primary btn-primary col-lg-2 col-sm-3 " data-mdb-ripple-init>search</button>
+            <form action="/admorders/">
+            <input type="search" name="search" class="form-control rounded offset-1 col-lg-8 col-sm-4 " placeholder="Search" aria-label="Search" aria-describedby="search-addon" />
+            <button type="submit" class="btn btn-outline-primary btn-primary col-lg-2 col-sm-3 " data-mdb-ripple-init>search</button>
+            </form>
           </div>
         <table class="table table-striped table-hover ms-3">
             <thead>
@@ -73,18 +71,30 @@
                 
             </tbody>
         </table>
-        <!-- <div class="clearfix">
-            <div class="hint-text">Showing <b>5</b> out of <b>25</b> entries</div>
+       <div class="clearfix">
+            <div class="hint-text"><b>{{order_items}} </b> </div>
+            {% if order_items.has_other_pages %}
             <ul class="pagination">
-                <li class="page-item disabled"><a href="#">Previous</a></li>
-                <li class="page-item"><a href="#" class="page-link">1</a></li>
-                <li class="page-item"><a href="#" class="page-link">2</a></li>
-                <li class="page-item active"><a href="#" class="page-link">3</a></li>
-                <li class="page-item"><a href="#" class="page-link">4</a></li>
-                <li class="page-item"><a href="#" class="page-link">5</a></li>
-                <li class="page-item"><a href="#" class="page-link">Next</a></li>
+                {% if order_items.has_previous %}
+                    <li class="page-item"><a href="?page={{order_items.previous_page_number}}{% if search %}&search={{search}}{% endif %}" class="page-link">&lt;</a></li>
+                {% else %}
+                    <li class="page-item disabled"><a href="#">&lt;</a></li>
+                {% endif %}
+                {% for i in order_items.paginator.page_range %}
+                    {% if order_items.number == i %}
+                        <li class="active"><span>{{ i }} <span class="sr-only"> (current) </span></span></li>
+                    {% else %}
+                        <li class="page-item"><a href="?page={{ i }}{% if search %}&search={{search}}{% endif %}" class="page-link">{{ i }} </a></li>
+                    {% endif %}
+                {% endfor %}
+                {% if order_items.has_next %}
+                    <li class="page-item"><a href="?page={{order_items.next_page_number}}{% if search %}&search={{search}}{% endif %}" class="page-link">&gt;</a></li>
+                {% else %}
+                    <li class="page-item disabled"><a href="#" class="page-link">&gt;</a></li>
+                {% endif %}
             </ul>
-        </div> -->
+            {% endif %}
+        </div> 
     </div>
 </div>
 <!-- edit Modal HTML -->
