--- a/ecom/templates/shop/singleproduct.html
+++ b/ecom/templates/shop/singleproduct.html
@@ -361,6 +361,8 @@
   <div id="ftco-loader" class="show fullscreen"><svg class="circular" width="48px" height="48px"><circle class="path-bg" cx="24" cy="24" r="22" fill="none" stroke-width="4" stroke="#eeeeee"/><circle class="path" cx="24" cy="24" r="22" fill="none" stroke-width="4" stroke-miterlimit="10" stroke="#F96D00"/></svg></div>
 
   <script src="https://code.jquery.com/jquery-3.6.4.min.js"></script>
+
+  <!-- update the stock according to size -->
   <script>
     document.addEventListener("DOMContentLoaded", function() {
         updateQuantity();
@@ -410,6 +412,8 @@ thumbnailContainer.addEventListener('mouseover', function () {
     resetZoom();
 });
 	</script>
+
+	<!-- submit with size -->
 	<script>
 		$(document).ready(function() {
 			$("#sizeForm").submit(function(e) {
