--- a/ecom/templates/cart/cart.html
+++ b/ecom/templates/cart/cart.html
@@ -161,7 +161,7 @@
                }
             },
             error: (error) => {
-              console.log(error,'hi');
+              console.log(error);
             }
           });
     
