--- a/ecom/templates/home1.html
+++ b/ecom/templates/home1.html
@@ -148,7 +148,7 @@
 								<span class="subheading">Men's Shoes</span>
     						<h2>Men's Collection</h2>
     						<p>Elevate Your Look, Empower Your Presence. Unleash the Latest Trends in Men's Fashion – Your Signature Style, Defined.</p>
-    						<p><a href="/shop/" class="btn btn-black px-3 py-2">Shop now</a></p>
+    						<p><a href="/shop/?men=men" class="btn btn-black px-3 py-2">Shop now</a></p>
     					</div>
     				</div>
 					</div>
@@ -161,7 +161,7 @@
 	    								<span class="subheading">Women's Shoes</span>
 			    						<h2>Women's Collection</h2>
 			    						<p>Fierce, Fabulous, Fearless. Unleash Your Style with Our Latest Women's Collection – Embrace the Extraordinary.</p>
-			    						<p><a href="/shop/" class="btn btn-black px-3 py-2">Shop now</a></p>
+			    						<p><a href="/shop/?women=women" class="btn btn-black px-3 py-2">Shop now</a></p>
 			    					</div>
 	    						</div>
 	    					</div>
