--- a/ecom/templates/admin/admproducts.html
+++ b/ecom/templates/admin/admproducts.html
@@ -35,6 +35,14 @@
             <button type="submit" class="btn btn-outline-primary btn-primary col-lg-2 col-sm-3 " data-mdb-ripple-init>search</button>
           </div>
         </form>
+                {% if messages %}
+                    {% for message in messages %}
+                        <div class="text-center">
+                            <h3 class=" text-danger"> {{ message }} </h3>
+                        </div>
+                        
+                    {% endfor %}
+                {% endif %}
         <table class="table table-striped table-hover ms-3">
             <thead>
                 <tr>
@@ -77,7 +85,7 @@
                         <div id="addvariant{{prod.id}}" class="modal fade">
                             <div class="modal-dialog">
                                 <div class="modal-content">
-                                    <form method="POST" action="/add_variant/{{prod.id}}" >
+                                    <form method="POST" action="/add_variant/{{prod.id}}" id="addvform" >
                                     {% csrf_token %}
                                         <div class="modal-header">						
                                             <h4 class="modal-title">Add Variant</h4>
@@ -108,7 +116,7 @@
                                             </div>
                                             <div class="form-group">
                                                 <label>Quantity</label>
-                                                <input name="quantity" type="number" class="form-control" required>
+                                                <input name="quantity" type="number" class="form-control" id="quantity" required>
                                             </div> 
                                         <div class="modal-footer">
                                             <input type="button" class="btn btn-default" data-dismiss="modal" value="Cancel">
@@ -172,7 +180,7 @@
 <div id="addProduct" class="modal fade">
     <div class="modal-dialog new1">
         <div class="modal-content">
-            <form method="POST" action="/add_product/" enctype="multipart/form-data">
+            <form method="POST" action="/add_product/" id="addpform" enctype="multipart/form-data">
             {% csrf_token %}
                 <div class="modal-header">						
                     <h4 class="modal-title">Add Product</h4>
@@ -202,11 +210,11 @@
                     </div>
                     <div class="form-group">
                         <label>No Offer Price</label>
-                        <input name="noofferprice" type="number" class="form-control" required>
+                        <input name="noofferprice" type="number" class="form-control" id="noofferprice" required>
                     </div>
                     <div class="form-group">
                         <label>offer Price</label>
-                        <input name="offerprice" type="number" class="form-control" required>
+                        <input name="offerprice" type="number" class="form-control" id="offerprice" required>
                     </div>
                     <div class="form-group">
                         <label>Description</label>
@@ -254,7 +262,7 @@
 <div id="editProduct{{prod.id}}" class="modal fade">
     <div class="modal-dialog new1">
         <div class="modal-content">
-            <form method="POST" action="/edit_product/{{prod.id}}" enctype="multipart/form-data">
+            <form method="POST" action="/edit_product/{{prod.id}}" id="editpform" enctype="multipart/form-data">
             {% csrf_token %}
                 <div class="modal-header">						
                     <h4 class="modal-title">Update Products</h4>
@@ -282,17 +290,13 @@
                         </select>
                         
                     </div>
-                    <!-- <div class="form-group">
-                        <label>Size</label>
-                        <input name="size" value="{{prod.size}}" type="text" class="form-control" required>
-                    </div> -->
                     <div class="form-group">
                         <label>No Offer Price</label>
-                        <input name="noofferprice" value="{{prod.original_price}}" type="number" class="form-control" required>
+                        <input name="noofferprice" value="{{prod.original_price}}" type="number" id="noofferpric" class="form-control" required>
                     </div>
                     <div class="form-group">
                         <label>offer Price</label>
-                        <input name="offerprice" value="{{prod.selling_price}}" type="number" class="form-control" required>
+                        <input name="offerprice" value="{{prod.selling_price}}" type="number" id="offerpric" class="form-control" required>
                     </div>
                     <div class="form-group">
                         <label>Description</label>
@@ -359,7 +363,7 @@
 <div id="edit_variant{{i.id}}" class="modal fade">
     <div class="modal-dialog new1 ">
         <div class="modal-content">
-            <form method="POST" action="/edit_variant/{{i.id}}" enctype="multipart/form-data">
+            <form method="POST" action="/edit_variant/{{i.id}}" id="editvaform" enctype="multipart/form-data">
             {% csrf_token %}
                 <div class="modal-header">						
                     <h4 class="modal-title">Update Stock</h4>
@@ -368,32 +372,9 @@
                 <div class="modal-body ">					
                     <div class="form-group">
                         <label>Quantity</label>
-                        <input name="quantity" value="{{i.stock}}" type="number" class="form-control" required>
+                        <input name="quantity" value="{{i.stock}}" type="number" id="quantitys" class="form-control" required>
                     </div> 		
                 
-                <!--                 
-                <div class="form-group ">
-                    <label for="category">Size</label>
-                    <select class="form-control" id="category" name="size" required>
-                        <option value="7">7</option>
-                        <option value="8">8</option>
-                        <option value="9">9</option>
-                        <option value="10">10</option>
-                    </select>
-                </div>
-                <div class="form-group">
-                    <label for="category">Color</label>
-                    <select class="form-control" id="category" name="color" >
-                        <option value="black">Black</option>
-                        <option value="white">White</option>
-                        <option value="red">Red</option>
-                        <option value="blue">Blue</option>
-                        <option value="Brown">Brown</option>
-                        <option value="pink">Pink</option>
-                        <option value="mixedcolors">Mixed Colors</option>
-
-                    </select>
-                </div> -->
 
             </div>
                 <div class="modal-footer">
@@ -457,4 +438,56 @@
     });
     </script>
 <script src="https://kit.fontawesome.com/412a20d28b.js" crossorigin="anonymous"></script>
+<script>
+    const form = document.getElementById("addpform")
+    form.addEventListener("submit",function(event){
+        const nooffer = document.getElementById('noofferprice').value;
+        const offerprice = document.getElementById('offerprice').value;
+        
+        if (nooffer <= 0 || offerprice <= 0 ){
+            event.preventDefault();
+            alert("enter a valid price (greater than 0 !!)");
+
+        }
+    });
+</script>
+<script>
+    const forms = document.getElementById("editpform")
+    forms.addEventListener("submit",function(event){
+        const nooffer = document.getElementById('noofferpric').value;
+        const offerprice = document.getElementById('offerpric').value;
+        
+        if (nooffer <= 0 || offerprice <= 0 ){
+            event.preventDefault();
+            alert("enter a valid price (greater than 0 !!)");
+
+        }
+    });
+</script>
+<script>
+    const form3 = document.getElementById("addvform")
+    form3.addEventListener("submit",function(event){
+        const quantity = document.getElementById('quantity').value;
+
+        if (quantity <= 0){
+            event.preventDefault();
+            alert("enter a valid quantity ")
+        }
+    });
+
+</script>
+<script>
+    const formedit = document.getElementById("editvaform")
+
+    formedit.addEventListener("submit",function(event){
+        const quantit = document.getElementById('quantitys').value;
+
+        if (quantit <= 0){
+            event.preventDefault();
+            alert("enter a valid quantity ")
+        }
+    });
+
+</script>
+
 {% endblock content1 %}
