--- a/ecom/templates/admin/adminbase.html
+++ b/ecom/templates/admin/adminbase.html
@@ -373,7 +373,7 @@ a[href*="#contact"]::before {
        <li><a href="/viewbrand/" class="cat">Categories</a></li>  
        <li><a href="/admorders/" class="ord"> Orders </a> </li>  
       <li><a href="/admreturns/" class="ret">Returns</a></li>  
-      <li><a href="/admcoupons/" class="coup">Coupons</a></li>  
+      <li><a href="/view_coupon/" class="coup">Coupons</a></li>  
       <li><a href="/admbanners/" class="ban">Banners</a></li>  
       <li><a href="/admlogout/" class="logou">Logout</a></li>  
 
