--- a/ecom/templates/admin/admcoupons.html
+++ b/ecom/templates/admin/admcoupons.html
@@ -19,88 +19,47 @@
                     <h2>Coupon <b>Management</b></h2>
                 </div>
                 <div class="col-sm-6">
-                    <a href="#addEmployeeModal" class="btn btn-success" data-toggle="modal"><i class="material-icons">&#xE147;</i> <span>Add New Product</span></a>
-                    <!-- <a href="#deleteEmployeeModal" class="btn btn-danger" data-toggle="modal"><i class="material-icons">&#xE15C;</i> <span>Delete</span></a>						 -->
-                </div>
+                    <a href="#addCouponModal" class="btn btn-success" data-toggle="modal"><i class="material-icons">&#xE147;</i> <span>Add New Coupon</span></a>                </div>
             </div>
         </div>
         <div class="row input-group ">
-            <input type="search" class="form-control rounded offset-1 col-lg-8 col-sm-4 " placeholder="Search" aria-label="Search" aria-describedby="search-addon" />
-            <button type="button" class="btn btn-outline-primary btn-primary col-lg-2 col-sm-3 " data-mdb-ripple-init>search</button>
+            <form action="/view_coupon/">
+                <input type="search" name="search" class="form-control rounded offset-1 col-lg-8 col-sm-4 " placeholder="Search" aria-label="Search" aria-describedby="search-addon" />
+                <button type="submit" class="btn btn-outline-primary btn-primary col-lg-2 col-sm-3 " >search</button>
+            </form>
           </div>
         <table class="table table-striped table-hover ms-3">
             <thead>
                 <tr>
-                   
-                    <th>Name</th>
-                    <th>Description</th>
+                    <th>Title</th>
                     <th>Code</th>
-                    <th>Value</th>
-                    <th>Expiry</th>
-                    <th>actions</th>
+                    <th>Discount Amount</th>
+                    <th>Start Date</th>
+                    <th>Expiry Date</th>
+                    <th>active/<br>deactive</th>
+                    <th>Update</th>
                 </tr>
             </thead>
             <tbody>
+                {% for coupon in coupons  %}
                 <tr>
-                    <td>summer sale </td>
-                    <td>only upto july 23</td>
-                    <td>J23KGFR1</td>
-                    <td>20%</td>
-                    <td>22/7/23</td>
-                    <td >
-                        <a href="#editEmployeeModal" class="edit" data-toggle="modal"><i class="material-icons" data-toggle="tooltip" title="Edit">&#xE254;</i></a>
-                        <a href="#listEmployeeModal" class="delete" data-toggle="modal"><i class="fa-solid fa-eye  fa-lg" style="color: #ffd500;"></i></a>
-                        <a href="#deleteEmployeeModal" class="delete" data-toggle="modal"><i class="material-icons" data-toggle="tooltip" title="Delete">&#xE872;</i></a>
+                    <td>{{coupon.title}}</td>
+                    <td>{{coupon.code}}</td>
+                    <td>{{coupon.discount_amount}}</td>
+                    <td>{{ coupon.valid_from }}</td>
+                    <td>{{coupon.valid_to}}</td>
+                    <td>
+                        {% if coupon.is_active %}
+                        <a href="#listCoupon{{coupon.id}}" class="blue " data-toggle="modal" title="unlist product"> <i class="fa-solid fa-eye-slash fa-sm pt-4" style="color: red;"></i></a>
+                        {% else %}
+                        <a href="#listCoupon{{coupon.id}}" class="delete " data-toggle="modal"><i class="fa-solid fa-eye  fa-lg pt-4" style="color: #ffd500;"></i></a>
+                        {% endif %}
+                    </td>
+                    <td>
+                        <a href="#editCoupon{{coupon.id}}" class="edit" data-toggle="modal"><i class="material-icons pt2" data-toggle="tooltip" title="Edit">&#xE254;</i></a>
                     </td>
                 </tr>
-                <tr>
-                    <td>summer sale </td>
-                    <td>only upto july 23</td>
-                    <td>J23KGFR1</td>
-                    <td>20%</td>
-                    <td>22/7/23</td>
-                    <td >
-                        <a href="#editEmployeeModal" class="edit" data-toggle="modal"><i class="material-icons" data-toggle="tooltip" title="Edit">&#xE254;</i></a>
-                        <a href="#listEmployeeModal" class="delete" data-toggle="modal"><i class="fa-solid fa-eye  fa-lg" style="color: #ffd500;"></i></a>
-                        <a href="#deleteEmployeeModal" class="delete" data-toggle="modal"><i class="material-icons" data-toggle="tooltip" title="Delete">&#xE872;</i></a>
-                    </td>
-                </tr>
-                <tr>
-                    <td>summer sale </td>
-                    <td>only upto july 23</td>
-                    <td>J23KGFR1</td>
-                    <td>20%</td>
-                    <td>22/7/23</td>
-                    <td >
-                        <a href="#editEmployeeModal" class="edit" data-toggle="modal"><i class="material-icons" data-toggle="tooltip" title="Edit">&#xE254;</i></a>
-                        <a href="#listEmployeeModal" class="delete" data-toggle="modal"><i class="fa-solid fa-eye  fa-lg" style="color: #ffd500;"></i></a>
-                        <a href="#deleteEmployeeModal" class="delete" data-toggle="modal"><i class="material-icons" data-toggle="tooltip" title="Delete">&#xE872;</i></a>
-                    </td>
-                </tr>
-                <tr>
-                    <td>summer sale </td>
-                    <td>only upto july 23</td>
-                    <td>J23KGFR1</td>
-                    <td>20%</td>
-                    <td>22/7/23</td>
-                    <td >
-                        <a href="#editEmployeeModal" class="edit" data-toggle="modal"><i class="material-icons" data-toggle="tooltip" title="Edit">&#xE254;</i></a>
-                        <a href="#listEmployeeModal" class="delete" data-toggle="modal"><i class="fa-solid fa-eye  fa-lg" style="color: #ffd500;"></i></a>
-                        <a href="#deleteEmployeeModal" class="delete" data-toggle="modal"><i class="material-icons" data-toggle="tooltip" title="Delete">&#xE872;</i></a>
-                    </td>
-                </tr>				
-                <tr>
-                    <td>summer sale </td>
-                    <td>only upto july 23</td>
-                    <td>J23KGFR1</td>
-                    <td>20%</td>
-                    <td>22/7/23</td>
-                    <td >
-                        <a href="#editEmployeeModal" class="edit" data-toggle="modal"><i class="material-icons" data-toggle="tooltip" title="Edit">&#xE254;</i></a>
-                        <a href="#listEmployeeModal" class="delete" data-toggle="modal"><i class="fa-solid fa-eye  fa-lg" style="color: #ffd500;"></i></a>
-                        <a href="#deleteEmployeeModal" class="delete" data-toggle="modal"><i class="material-icons" data-toggle="tooltip" title="Delete">&#xE872;</i></a>
-                    </td>
-                </tr>
+                {% endfor %}
             </tbody>
         </table>
         <div class="clearfix">
@@ -118,34 +77,35 @@
     </div>
 </div>
 <!-- ADD Modal HTML -->
-<div id="addEmployeeModal" class="modal fade">
+<div id="addCouponModal" class="modal fade">
     <div class="modal-dialog">
         <div class="modal-content">
-            <form>
+            <form method="post" action="/add_coupon/">
+                {% csrf_token %}
                 <div class="modal-header">						
                     <h4 class="modal-title">Add Coupon</h4>
                     <button type="button" class="close" data-dismiss="modal" aria-hidden="true">&times;</button>
                 </div>
                 <div class="modal-body">					
                     <div class="form-group">
-                        <label>Name</label>
-                        <input type="text" class="form-control" required>
-                    </div>
-                    <div class="form-group">
-                        <label>Description</label>
-                        <input type="email" class="form-control" required>
+                        <label>Title</label>
+                        <input type="text" name="title"  class="form-control" autofocus  required>
                     </div>
                     <div class="form-group">
                         <label>Code</label>
-                        <input type="text" class="form-control" required>
+                        <input type="text" name="code" class="form-control" required>
                     </div>
                     <div class="form-group">
-                        <label>Value</label>
-                        <input type="text" class="form-control" required>
+                        <label>Discount Amount</label>
+                        <input type="text" name="disamount" class="form-control" required>
                     </div>
                     <div class="form-group">
-                        <label>Expiry</label>
-                        <input type="number" class="form-control" required>
+                        <label>Start Date</label>
+                        <input type="date" name="sdate" class="form-control" required>
+                    </div>
+                    <div class="form-group">
+                        <label>Expiry Date</label>
+                        <input type="date" name="edate" class="form-control" required>
                     </div>
                   		
                 </div>
@@ -157,88 +117,74 @@
         </div>
     </div>
 </div>
+
 <!-- Edit Modal HTML -->
-<div id="editEmployeeModal" class="modal fade">
+{% for coupon in coupons %}
+<div id="editCoupon{{coupon.id}}" class="modal fade">
     <div class="modal-dialog">
         <div class="modal-content">
-            <form>
+            <form method="post" action="/update_coupon/{{coupon.id}}">
+                {% csrf_token %}
                 <div class="modal-header">						
-                    <h4 class="modal-title">Edit Coupon</h4>
+                    <h4 class="modal-title">Update Coupon</h4>
                     <button type="button" class="close" data-dismiss="modal" aria-hidden="true">&times;</button>
                 </div>
                 <div class="modal-body">					
                     <div class="form-group">
-                        <label>Name</label>
-                        <input type="text" class="form-control" required>
-                    </div>
-                    <div class="form-group">
-                        <label>Description</label>
-                        <input type="email" class="form-control" required>
+                        <label>Title</label>
+                        <input type="text" name="title" value="{{coupon.title}}"  class="form-control" autofocus  required>
                     </div>
                     <div class="form-group">
                         <label>Code</label>
-                        <input type="text" class="form-control" required>
+                        <input type="text" name="code" value="{{coupon.code}}" class="form-control" required>
                     </div>
                     <div class="form-group">
-                        <label>Value</label>
-                        <input type="text" class="form-control" required>
+                        <label>Discount Amount</label>
+                        <input type="text" name="disamount" value="{{coupon.discount_amount}}" class="form-control" required>
                     </div>
                     <div class="form-group">
-                        <label>Expiry</label>
-                        <input type="number" class="form-control" required>
+                        <label>Start Date</label>
+                        <input type="date" name="sdate" value="{{coupon.valid_from|date:'Y-m-d' }}" class="form-control" required>
                     </div>
-                  		
+                    <div class="form-group">
+                        <label>Expiry Date</label>
+                        <input type="date" name="edate" value="{{coupon.valid_to|date:'Y-m-d' }}" class="form-control" required>
+                    </div>
                 </div>
                 <div class="modal-footer">
                     <input type="button" class="btn btn-default" data-dismiss="modal" value="Cancel">
-                    <input type="submit" class="btn btn-info" value="Save">
+                    <input type="submit" class="btn btn-info" value="Update">
                 </div>
             </form>
         </div>
     </div>
 </div>
+{% endfor %}
+
 <!-- list product -->
-<div id="listEmployeeModal" class="modal fade">
+{% for coupon in coupons %}
+<div id="listCoupon{{coupon.id}}" class="modal fade">
     <div class="modal-dialog">
         <div class="modal-content">
-            <form>
+            <form method="post" action="/activation/{{coupon.id}}">
+                {% csrf_token %}
                 <div class="modal-header">						
                     <h4 class="modal-title">list Coupon</h4>
                     <button type="button" class="close" data-dismiss="modal" aria-hidden="true">&times;</button>
                 </div>
                 <div class="modal-body">					
-                    <p>Are you sure you want to list these Coupon?</p>
+                    <p>Are you sure you want to active/deactive {{coupon.title}}?</p>
                     <p class="text-warning"><small>This action can be reversed.</small></p>
                 </div>
                 <div class="modal-footer">
                     <input type="button" class="btn btn-default" data-dismiss="modal" value="Cancel">
-                    <input type="submit" class="btn btn-danger" value="List">
+                    <input type="submit" class="btn btn-danger" value="{% if coupon.is_active %} Deactive {% else %} Active {% endif %}">
                 </div>
             </form>
         </div>
     </div>
 </div>
-<!-- Delete Modal HTML -->
-<div id="deleteEmployeeModal" class="modal fade">
-    <div class="modal-dialog">
-        <div class="modal-content">
-            <form>
-                <div class="modal-header">						
-                    <h4 class="modal-title">Delete Coupon</h4>
-                    <button type="button" class="close" data-dismiss="modal" aria-hidden="true">&times;</button>
-                </div>
-                <div class="modal-body">					
-                    <p>Are you sure you want to delete these Coupon?</p>
-                    <p class="text-warning"><small>This action cannot be undone.</small></p>
-                </div>
-                <div class="modal-footer">
-                    <input type="button" class="btn btn-default" data-dismiss="modal" value="Cancel">
-                    <input type="submit" class="btn btn-danger" value="Delete">
-                </div>
-            </form>
-        </div>
-    </div>
-</div>
+{% endfor %}
 <script src="https://code.jquery.com/jquery-3.6.4.min.js"></script>
 <script src="https://kit.fontawesome.com/412a20d28b.js" crossorigin="anonymous"></script>
 {% endblock content1 %}
