--- a/ecom/templates/admin/admorders.html
+++ b/ecom/templates/admin/admorders.html
@@ -23,7 +23,7 @@
         <div class="row input-group mb-4 mt-4">
             <form action="/admorders/">
             <input type="search" name="search" class="form-control rounded offset-1 col-lg-8 col-sm-4 " placeholder="Search" aria-label="Search" aria-describedby="search-addon" />
-            <button type="submit" class="btn btn-outline-primary btn-primary col-lg-2 col-sm-3 " data-mdb-ripple-init>search</button>
+            <button type="submit" class="btn btn-outline-primary btn-primary col-lg-2 col-sm-3 " >search</button>
             </form>
           </div>
                 {% if messages %}
@@ -37,43 +37,31 @@
         <table class="table table-striped table-hover ms-3">
             <thead>
                 <tr>
-                    <th>id</th>
-                    <th>Product Name</th>
-                    <th>Image</th>
-                    <th>User</th>
+                    <th>No.</th>
+                    <th>User Name</th>
                     <th>Address</th>
-                    <th>Price x Quantity</th>
-                    <th>Size</th>
-                    <th>Payment</th>
-                    <th>Ordered date</th>
-                    <th>Delivery date</th>
-                    <th>Status</th>
+                    <th>Order Date</th>
+                    <th>Coupon Used</th>
+                    <th>Total paid</th>
+                    <th>Payment Method</th>
+                    <th>view details</th>
                 </tr>
             </thead>
             <tbody>
                 {% for item in order_items  %}
                 <tr>
-                    <td> {{item.id}} </td>
-                    <td style=" word-wrap: break-word; max-width:100px"> {{item.product.product_id.brand}} <br> {{item.product.product_id.name}} </td>
-                    <td><img src=" {{ item.product.product_id.image1.url }} " alt="nike" style="width: 70px; height: 80px; "></td>
-                    <td> {{item.user1}} </td>
-                    <td style=" word-wrap: break-word; max-width:130px"> {{item.address1.state}},{{item.address1.district}} <br>
-                        {{item.address1.house}},{{item.address1.town}}, {{item.address1.pincode}} <br> {{item.address1.number}}
+                    <td>{{forloop.counter}}</td>
+                    <td> {{item.user}} </td>
+                    <td style=" word-wrap: break-word; max-width:130px"> {{item.address.state}},{{item.address.district}} <br>
+                        {{item.address.house}},{{item.address.town}}, PIN: {{item.address.pincode}} <br> {{item.address.number}}
                     </td>
-                    <td> {{item.product.product_id.selling_price}} x {{item.quantity}}  </td>
-                    <td> {{item.size}}  </td>
-                    <td> {{item.order_id.payment_mode}} </td>
-                    
+                    <td> {{item.order_date}}  </td>
+                    <td> {% if item.coupon_applied %} Yes <br> ₹{{item.coupon_id.discount_amount}} {% else %} No {% endif %} </td>
+                    <td> ₹{{ item.total }} </td>
                     <td >
-                            {{item.order_id.order_date}} 
-                        <!-- <a href="#editEmployeeModal" class="edit" data-toggle="modal"><i class="material-icons" data-toggle="tooltip" title="Edit">&#xE254;</i></a>
-                        <a href="#listEmployeeModal" class="delete" data-toggle="modal"><i class="fa-solid fa-eye  fa-lg" style="color: #ffd500;"></i></a>
-                        <a href="#deleteEmployeeModal" class="delete" data-toggle="modal"><i class="material-icons" data-toggle="tooltip" title="Delete">&#xE872;</i></a> -->
+                            {{item.payment_mode}}
                     </td>
-                    <td> {{item.delivery_date}} 
-                        <br>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; <a href="#editdate{{item.id}}" class="edit " data-toggle="modal"><i class="material-icons" data-toggle="tooltip" title="Edit">&#xE254;</i></a></td>
-                    </td>
-                    <td> {{item.status}} <a href="#editstatus{{item.id}}" class="edit" data-toggle="modal"><i class="material-icons " data-toggle="tooltip" title="Edit">&#xE254;</i></a></td>
+                    <td> <a href="/admorderitems/{{item.id}}" class="btn btn-dark text-white"> view details </a> </td>
                 </tr>
                 {% endfor %}
                 
@@ -105,93 +93,4 @@
         </div> 
     </div>
 </div>
-<!-- edit status Modal HTML -->
-{% for item in order_items %}
-<div id="editstatus{{item.id}}" class="modal fade">
-    <div class="modal-dialog">
-        <div class="modal-content">
-            <form method="post" action="/update_status/{{item.id}}">
-                {% csrf_token %}
-                <div class="modal-header">						
-                    <h4 class="modal-title">Update Status</h4>
-                    <button type="button" class="close" data-dismiss="modal" aria-hidden="true">&times;</button>
-                </div>
-                <div class="modal-body">					
-                    <div class="form-group">
-                        <label>Order ID</label>
-                        <input type="text" class="form-control"  value="{{item.id}}"  disabled>
-                    </div>
-                    <div class="form-group">
-                        <label>Product</label>
-                        <input type="email" class="form-control" value="{{item.product.product_id}}" disabled>
-                    </div>
-                    <div class="form-group">
-                        <label>Customer</label>
-                        <input type="text" class="form-control" value="{{item.user1}}" disabled>
-                    </div>
-                    <div class="form-group">
-                        <label for="category">Status</label>       
-                        <select class="form-control" id="status" name="status" required>
-                            <option value="ordered" {% if item.status == 'ordered' %} selected {% endif %}> Ordered</option>
-                            <option value="shipped" {% if item.status == 'shipped' %} selected {% endif %} > Shipped</option>
-                            <option value="out for delivery" {% if item.status == 'out for delivery' %} selected {% endif %}> Out for delivery</option>
-                            <option value="delivered" {% if item.status == 'delivered' %} selected {% endif %}> Delivered</option>
-                            <option value="cancelled" {% if item.status == 'cancelled' %} selected {% endif %}>Cancelled </option>
-                        </select>
-                        
-                    </div>
-                    
-                </div>
-                <div class="modal-footer">
-                    <input type="button" class="btn btn-default" data-dismiss="modal" value="Cancel">
-                    <input type="submit" class="btn btn-success" value="Update">
-                </div>
-            </form>
-        </div>
-    </div>
-</div>
-{% endfor %}
-
-<!-- update delivery date  -->
-{% for item in order_items %}
-<div id="editdate{{item.id}}" class="modal fade">
-    <div class="modal-dialog">
-        <div class="modal-content">
-            <form method="post" action="/update_date/{{item.id}}">
-                {% csrf_token %}
-                <div class="modal-header">						
-                    <h4 class="modal-title">Update Status</h4>
-                    <button type="button" class="close" data-dismiss="modal" aria-hidden="true">&times;</button>
-                </div>
-                <div class="modal-body">					
-                    <div class="form-group">
-                        <label>Order ID</label>
-                        <input type="text" class="form-control"  value="{{item.id}}"  disabled>
-                    </div>
-                    <div class="form-group">
-                        <label>Product</label>
-                        <input type="text" class="form-control" value="{{item.product.product_id}}" disabled>
-                    </div>
-                    <div class="form-group">
-                        <label>Ordered Date</label>
-                        <input type="text" class="form-control" value="{{item.order_id.order_date}}" disabled>
-                    </div>
-                    <div class="form-group">
-                        <label for="category">Delivery Date : {{ item.delivery_date }}</label>       
-                        <input type="date" class="form-control" value="{{ item.delivery_date|date:'Y-m-d' }}" name="date" required>
-                        
-                    </div>
-                    
-                </div>
-                <div class="modal-footer">
-                    <input type="button" class="btn btn-default" data-dismiss="modal" value="Cancel">
-                    <input type="submit" class="btn btn-success" value="Update">
-                </div>
-            </form>
-        </div>
-    </div>
-</div>
-{% endfor %}
-<script src="https://code.jquery.com/jquery-3.6.4.min.js"></script>
-<script src="https://kit.fontawesome.com/412a20d28b.js" crossorigin="anonymous"></script>
 {% endblock content1 %}
